added some fun functionality and added more localization content

--- a/Ohtu-miniprojekti/src/main/resources/bundles/messages_fi.properties
+++ b/Ohtu-miniprojekti/src/main/resources/bundles/messages_fi.properties
@@ -3,3 +3,7 @@ author=kirjailija
 title=Otsikko
 pubYear=julkaisuvuosi
 publisher=julkaisija
+label.list=Kaikkien l\u00e4hteiden listaus
+navibar.addRef=Lis\u00e4\u00e4 l\u00e4hde
+navibar.list=Listaa l\u00e4hteet
+navibar.listBib=Listaa l\u00e4hteet bibtexin\u00e4
