--- a/Ohtu-miniprojekti/src/main/resources/bundles/messages_en.properties
+++ b/Ohtu-miniprojekti/src/main/resources/bundles/messages_en.properties
@@ -1,1 +1,9 @@
 label.welcome=Welcome!
+label.list=Listing of All References
+author=Author
+title=Title
+pubYear=Publish year
+publisher=Publisher
+navibar.addRef=Add Reference
+navibar.list=List references
+navibar.listBib=List as bibtex
