added some features to search

--- a/Ohtu-miniprojekti/src/main/resources/bundles/messages_en.properties
+++ b/Ohtu-miniprojekti/src/main/resources/bundles/messages_en.properties
@@ -7,3 +7,5 @@ publisher=Publisher
 navibar.addRef=Add Reference
 navibar.list=List references
 navibar.listBib=List as bibtex
+search.text=Search references
+search.ignorecase=Ignore case
