--- a/Ohtu-miniprojekti/src/main/resources/bundles/messages_fi.properties
+++ b/Ohtu-miniprojekti/src/main/resources/bundles/messages_fi.properties
@@ -7,3 +7,5 @@ label.list=Kaikkien l\u00e4hteiden listaus
 navibar.addRef=Lis\u00e4\u00e4 l\u00e4hde
 navibar.list=Listaa l\u00e4hteet
 navibar.listBib=Listaa l\u00e4hteet bibtexin\u00e4
+search.text=Etsi l\u00e4hteit\u00e4
+search.ignorecase=Merkkikokoriippumaton haku
