new locale stuff

--- a/Ohtu-miniprojekti/src/main/resources/bundles/messages_en.properties
+++ b/Ohtu-miniprojekti/src/main/resources/bundles/messages_en.properties
@@ -7,3 +7,7 @@ publisher=Publisher
 navibar.addRef=Add Reference
 navibar.list=List references
 navibar.listBib=List as bibtex
+organisation=Organisation
+booktitle=Book title
+month=Month
+journal=Journal
