--- a/Ohtu-miniprojekti/src/main/resources/bundles/messages_sv.properties
+++ b/Ohtu-miniprojekti/src/main/resources/bundles/messages_sv.properties
@@ -8,3 +8,7 @@ publisher=Publisher
 navibar.addRef=L\u00e4gga i p\u00e5se
 navibar.list=lista alla referencsa
 navibar.listBib=lista referensa p\u00e5 bibtex
+organisation=organisaation-SWE
+booktitle=BOOKTITLE-SWE
+month=MONTH-SWE
+journal=JOURNAL-SWE
