--- a/Ohtu-miniprojekti/src/main/resources/bundles/messages_fi.properties
+++ b/Ohtu-miniprojekti/src/main/resources/bundles/messages_fi.properties
@@ -7,3 +7,7 @@ label.list=Kaikkien l\u00e4hteiden listaus
 navibar.addRef=Lis\u00e4\u00e4 l\u00e4hde
 navibar.list=Listaa l\u00e4hteet
 navibar.listBib=Listaa l\u00e4hteet bibtexin\u00e4
+organisation=Organisaatio
+booktitle=Kirjan nimi
+month=Kuukausi
+journal=Julkaisu
