--- a/Ohtu-miniprojekti/src/main/resources/bundles/messages_en.properties
+++ b/Ohtu-miniprojekti/src/main/resources/bundles/messages_en.properties
@@ -9,7 +9,12 @@ navibar.list=List references
 navibar.listBib=List as bibtex
 organisation=Organisation
 booktitle=Book title
-month=Month
+pubMonth=Month
 journal=Journal
 search.text=Search references
 search.ignorecase=Ignore case
+volume=Volume
+number=Number
+pages=Pages
+address=Address
+Editor=Editor
