--- a/Ohtu-miniprojekti/src/main/resources/bundles/messages_sv.properties
+++ b/Ohtu-miniprojekti/src/main/resources/bundles/messages_sv.properties
@@ -1,16 +1,21 @@
 
 label.welcome=V\u00e4lkommen
 label.list=Listing of All References
-author=Author
+author=F\u00f6rfattare
 title=Title
 pubYear=Publish year
 publisher=Publisher
 navibar.addRef=L\u00e4gga i p\u00e5se
 navibar.list=lista alla referencsa
-navibar.listBib=lista referensa p\u00e5 bibtex
-organisation=organisaation-SWE
+navibar.listBib=lista referensa som bibtex
+organisation=Organisation
 booktitle=BOOKTITLE-SWE
-month=MONTH-SWE
+pubMonth=M\u00e5nad
 journal=JOURNAL-SWE
 search.text=S\u00f6k referenser
 search.ignorecase=Ignorera sm\u00e5 och stora bokst\u00e4ver
+volume=volym
+number=Nummer
+pages=Sidor(na?)
+address=Adress
+Editor=Jag vet inte
