--- a/Ohtu-miniprojekti/src/main/resources/bundles/messages_fi.properties
+++ b/Ohtu-miniprojekti/src/main/resources/bundles/messages_fi.properties
@@ -1,15 +1,20 @@
 label.welcome=Tervetuloa!
-author=kirjailija
+author=Kirjailija
 title=Otsikko
-pubYear=julkaisuvuosi
-publisher=julkaisija
+pubYear=Julkaisuvuosi
+publisher=Julkaisija
 label.list=Kaikkien l\u00e4hteiden listaus
 navibar.addRef=Lis\u00e4\u00e4 l\u00e4hde
 navibar.list=Listaa l\u00e4hteet
 navibar.listBib=Listaa l\u00e4hteet bibtexin\u00e4
 organisation=Organisaatio
 booktitle=Kirjan nimi
-month=Kuukausi
+pubMonth=Kuukausi
 journal=Julkaisu
 search.text=Etsi l\u00e4hteit\u00e4
 search.ignorecase=Merkkikokoriippumaton haku
+volume=Osa
+number=Numero
+pages=Sivut
+address=Julkaisuosoite
+Editor=Editori
