Muokkaus ja poisto lisätty lähteille

--- a/Ohtu-miniprojekti/src/main/resources/bundles/messages_en.properties
+++ b/Ohtu-miniprojekti/src/main/resources/bundles/messages_en.properties
@@ -17,4 +17,8 @@ volume=Volume
 number=Number
 pages=Pages
 address=Address
-Editor=Editor
+editor=Editor
+update=Update reference
+delete=delete
+select=select
+download=download
