--- a/Ohtu-miniprojekti/src/main/resources/bundles/messages_fi.properties
+++ b/Ohtu-miniprojekti/src/main/resources/bundles/messages_fi.properties
@@ -17,4 +17,8 @@ volume=Osa
 number=Numero
 pages=Sivut
 address=Julkaisuosoite
-Editor=Editori
+editor=Editori
+update=Muokkaa
+delete=delete
+select=select
+download=lataa
