--- a/Ohtu-miniprojekti/src/main/resources/bundles/messages_sv.properties
+++ b/Ohtu-miniprojekti/src/main/resources/bundles/messages_sv.properties
@@ -18,4 +18,8 @@ volume=volym
 number=Nummer
 pages=Sidor(na?)
 address=Adress
-Editor=Jag vet inte
+editor=Jag vet inte
+update=Updatera reference
+delete=delete
+select=select
+download=ladda ner
