--- a/Ohtu-miniprojekti/src/main/resources/bundles/messages_en.properties
+++ b/Ohtu-miniprojekti/src/main/resources/bundles/messages_en.properties
@@ -22,3 +22,9 @@ update=Update reference
 delete=delete
 select=select
 download=download
+Book=Book
+Artikkeli=Article
+Inproceedings=Inproceedings
+title.add=Add Refence
+title.list=Listing of references
+title.bibtex=References as bibtex
