--- a/Ohtu-miniprojekti/src/main/resources/bundles/messages_fi.properties
+++ b/Ohtu-miniprojekti/src/main/resources/bundles/messages_fi.properties
@@ -19,6 +19,12 @@ pages=Sivut
 address=Julkaisuosoite
 editor=Editori
 update=Muokkaa
-delete=delete
-select=select
+delete=poista
+select=valitse
 download=lataa
+Book=Kirja
+Artikkeli=Artikkeli
+Inproceedings=Inproceedings
+title.add=Lis\u00e4\u00e4 L\u00e4hde
+title.list=L\u00e4hteiden listaus
+title.bibtex=L\u00e4hteet bibtexin\u00e4
