--- a/Ohtu-miniprojekti/src/main/resources/bundles/messages_sv.properties
+++ b/Ohtu-miniprojekti/src/main/resources/bundles/messages_sv.properties
@@ -1,14 +1,14 @@
 
 label.welcome=V\u00e4lkommen
-label.list=Listing of All References
+label.list=Listing of All References-SWE
 author=F\u00f6rfattare
-title=Title
-pubYear=Publish year
-publisher=Publisher
-navibar.addRef=L\u00e4gga i p\u00e5se
+title=Title-SWE
+pubYear=Publish year-SWE
+publisher=Publisher-SWE
+navibar.addRef=L\u00e4gga i p\u00e5se-SWE
 navibar.list=lista alla referencsa
 navibar.listBib=lista referensa som bibtex
-organisation=Organisation
+organisation=Organisation-SWE
 booktitle=BOOKTITLE-SWE
 pubMonth=M\u00e5nad
 journal=JOURNAL-SWE
@@ -20,6 +20,12 @@ pages=Sidor(na?)
 address=Adress
 editor=Jag vet inte
 update=Updatera reference
-delete=delete
-select=select
+delete=delete-SWE
+select=select-SWE
 download=ladda ner
+Book=Bok
+Artikkeli=Artikle -SWE
+Inproceedings=Inproceedings
+title.add=add reference-SWE
+title.list=Lista om reference-SWE
+title.bibtex=L\u00e4hteet bibtexin\u00e4-SWE
