--- a/Ohtu-miniprojekti/src/main/resources/bundles/messages_en.properties
+++ b/Ohtu-miniprojekti/src/main/resources/bundles/messages_en.properties
@@ -23,7 +23,7 @@ delete=delete
 select=select
 download=download
 Book=Book
-Artikkeli=Article
+Article=Article
 Inproceedings=Inproceedings
 title.add=Add Refence
 title.list=Listing of references
