--- a/Ohtu-miniprojekti/src/main/resources/bundles/messages_fi.properties
+++ b/Ohtu-miniprojekti/src/main/resources/bundles/messages_fi.properties
@@ -23,7 +23,7 @@ delete=poista
 select=valitse
 download=lataa
 Book=Kirja
-Artikkeli=Artikkeli
+Article=Artikkeli
 Inproceedings=Inproceedings
 title.add=Lis\u00e4\u00e4 L\u00e4hde
 title.list=L\u00e4hteiden listaus
