--- a/Ohtu-miniprojekti/src/main/resources/bundles/messages_sv.properties
+++ b/Ohtu-miniprojekti/src/main/resources/bundles/messages_sv.properties
@@ -24,7 +24,7 @@ delete=delete-SWE
 select=select-SWE
 download=ladda ner
 Book=Bok
-Artikkeli=Artikle -SWE
+Article=Artikle -SWE
 Inproceedings=Inproceedings
 title.add=add reference-SWE
 title.list=Lista om reference-SWE
