more localization and fixed some stuff

--- a/Ohtu-miniprojekti/src/main/resources/bundles/messages_en.properties
+++ b/Ohtu-miniprojekti/src/main/resources/bundles/messages_en.properties
@@ -20,7 +20,7 @@ address=Address
 editor=Editor
 update=Update reference
 delete=delete
-select=select
+select=as bibtex
 download=download
 Book=Book
 Article=Article
@@ -28,3 +28,7 @@ Inproceedings=Inproceedings
 title.add=Add Refence
 title.list=Listing of references
 title.bibtex=References as bibtex
+label.pureBibtex=pure bibtex
+label.downloadBibtex=Lataa .bib-tiedosto
+title.pureBibtex=Pure bibtex
+title.update=Modify Reference
