--- a/Ohtu-miniprojekti/src/main/resources/bundles/messages_fi.properties
+++ b/Ohtu-miniprojekti/src/main/resources/bundles/messages_fi.properties
@@ -20,7 +20,7 @@ address=Julkaisuosoite
 editor=Editori
 update=Muokkaa
 delete=poista
-select=valitse
+select=bibtexin\u00e4
 download=lataa
 Book=Kirja
 Article=Artikkeli
@@ -28,3 +28,7 @@ Inproceedings=Inproceedings
 title.add=Lis\u00e4\u00e4 L\u00e4hde
 title.list=L\u00e4hteiden listaus
 title.bibtex=L\u00e4hteet bibtexin\u00e4
+label.pureBibtex=pelkk\u00e4 bibtex
+label.downloadBibtex=Lataa .bib-tiedosto
+title.pureBibtex=Pelkk\u00e4 bibtex
+title.update=P\u00e4ivit\u00e4 l\u00e4hdett\u00e4
