--- a/Ohtu-miniprojekti/src/main/resources/bundles/messages_sv.properties
+++ b/Ohtu-miniprojekti/src/main/resources/bundles/messages_sv.properties
@@ -21,7 +21,7 @@ address=Adress
 editor=Jag vet inte
 update=Updatera reference
 delete=delete-SWE
-select=select-SWE
+select=as bibtex-SWE
 download=ladda ner
 Book=Bok
 Article=Artikle -SWE
@@ -29,3 +29,7 @@ Inproceedings=Inproceedings
 title.add=add reference-SWE
 title.list=Lista om reference-SWE
 title.bibtex=L\u00e4hteet bibtexin\u00e4-SWE
+label.pureBibtex=pura bibtexena -SWE
+label.downloadBibtex=Lataa .bib-tiedosto-SWE
+title.pureBibtex=Pelkk\u00e4 bibtex-SWE
+title.update=P\u00e4ivit\u00e4 l\u00e4hdett\u00e4-SWE
