added title to bibtex.jsp

--- a/Ohtu-miniprojekti/src/main/resources/bundles/messages_en.properties
+++ b/Ohtu-miniprojekti/src/main/resources/bundles/messages_en.properties
@@ -32,3 +32,4 @@ label.pureBibtex=pure bibtex
 label.downloadBibtex=Lataa .bib-tiedosto
 title.pureBibtex=Pure bibtex
 title.update=Modify Reference
+header.bibtex=References as bibtex
