--- a/Ohtu-miniprojekti/src/main/resources/bundles/messages_fi.properties
+++ b/Ohtu-miniprojekti/src/main/resources/bundles/messages_fi.properties
@@ -32,3 +32,4 @@ label.pureBibtex=pelkk\u00e4 bibtex
 label.downloadBibtex=Lataa .bib-tiedosto
 title.pureBibtex=Pelkk\u00e4 bibtex
 title.update=P\u00e4ivit\u00e4 l\u00e4hdett\u00e4
+header.bibtex=L\u00e4hteet bibtexin\u00e4
