--- a/Ohtu-miniprojekti/src/main/resources/bundles/messages_sv.properties
+++ b/Ohtu-miniprojekti/src/main/resources/bundles/messages_sv.properties
@@ -33,3 +33,4 @@ label.pureBibtex=pura bibtexena -SWE
 label.downloadBibtex=Lataa .bib-tiedosto-SWE
 title.pureBibtex=Pelkk\u00e4 bibtex-SWE
 title.update=P\u00e4ivit\u00e4 l\u00e4hdett\u00e4-SWE
+header.bibtex=L\u00e4hteet bibtexin\u00e4-SWE
