Lisättiin BibtexController ja DpwnloadController

--- a/Ohtu-miniprojekti/src/main/resources/bundles/messages_sv.properties
+++ b/Ohtu-miniprojekti/src/main/resources/bundles/messages_sv.properties
@@ -24,10 +24,10 @@ delete=delete-SWE
 select=as bibtex-SWE
 download=ladda ner
 Book=Bok
-Article=Artikle -SWE
+Article=Artikel
 Inproceedings=Inproceedings
 title.add=add reference-SWE
-title.list=Lista om reference-SWE
+title.list=Lista references-SWE
 title.bibtex=L\u00e4hteet bibtexin\u00e4-SWE
 label.pureBibtex=pura bibtexena -SWE
 label.downloadBibtex=Lataa .bib-tiedosto-SWE
