edit forms to use localisation

--- a/Ohtu-miniprojekti/src/main/resources/bundles/messages_fi.properties
+++ b/Ohtu-miniprojekti/src/main/resources/bundles/messages_fi.properties
@@ -33,3 +33,5 @@ label.downloadBibtex=Lataa .bib-tiedosto
 title.pureBibtex=Pelkk\u00e4 bibtex
 title.update=P\u00e4ivit\u00e4 l\u00e4hdett\u00e4
 header.bibtex=L\u00e4hteet bibtexin\u00e4
+pagesFromTo=Sivut (muodossa: alku -- loppu)
+pubPlace=Julkaisupaikka
