--- a/Ohtu-miniprojekti/src/main/resources/bundles/messages_sv.properties
+++ b/Ohtu-miniprojekti/src/main/resources/bundles/messages_sv.properties
@@ -1,36 +1,38 @@
 
 label.welcome=V\u00e4lkommen
-label.list=Listing of All References-SWE
+label.list=Lista p\u00e5 alla referenser
 author=F\u00f6rfattare
-title=Title-SWE
-pubYear=Publish year-SWE
-publisher=Publisher-SWE
-navibar.addRef=L\u00e4gga i p\u00e5se-SWE
-navibar.list=lista alla referencsa
-navibar.listBib=lista referensa som bibtex
-organisation=Organisation-SWE
-booktitle=BOOKTITLE-SWE
+title=Titel
+pubYear=Utgivnings \u00e5r
+publisher=Utgivare
+navibar.addRef=L\u00e4gg till referens
+navibar.list=Lista alla referenser
+navibar.listBib=Lista referenserna i bibtex format
+organisation=Organisation
+booktitle=Bok titel
 pubMonth=M\u00e5nad
-journal=JOURNAL-SWE
+journal=Journal
 search.text=S\u00f6k referenser
 search.ignorecase=Ignorera sm\u00e5 och stora bokst\u00e4ver
-volume=volym
+volume=Volym
 number=Nummer
-pages=Sidor(na?)
-address=Adress
-editor=Jag vet inte
-update=Updatera reference
-delete=delete-SWE
-select=as bibtex-SWE
-download=ladda ner
+pages=Sidor
+address=Address
+editor=Editerare
+update=Uppdatera referens
+delete=Radera
+select=I bibtex format
+download=Ladda ner
 Book=Bok
 Article=Artikel
-Inproceedings=Inproceedings
-title.add=add reference-SWE
-title.list=Lista references-SWE
-title.bibtex=L\u00e4hteet bibtexin\u00e4-SWE
-label.pureBibtex=pura bibtexena -SWE
-label.downloadBibtex=Lataa .bib-tiedosto-SWE
-title.pureBibtex=Pelkk\u00e4 bibtex-SWE
-title.update=P\u00e4ivit\u00e4 l\u00e4hdett\u00e4-SWE
-header.bibtex=L\u00e4hteet bibtexin\u00e4-SWE
+Inproceedings=Inproceeding
+title.add=L\u00e4gg till referens
+title.list=Lista referenser
+title.bibtex=Lista referenserna i bibtex format
+label.pureBibtex=Ren bibtex
+label.downloadBibtex=Ladda ner .bib-fil
+title.pureBibtex=Ren bibtex
+title.update=Uppdatera referenser
+header.bibtex=Referenserna i bibtex format
+pagesFromTo=Sidor (format: b\u00f6rjan -- slut)
+pubPlace=Utgivnings plats
