--- a/Ohtu-miniprojekti/src/main/resources/bundles/messages_en.properties
+++ b/Ohtu-miniprojekti/src/main/resources/bundles/messages_en.properties
@@ -33,3 +33,5 @@ label.downloadBibtex=Lataa .bib-tiedosto
 title.pureBibtex=Pure bibtex
 title.update=Modify Reference
 header.bibtex=References as bibtex
+pagesFromTo=Pages (format: beginning -- end)
+pubPlace=Publish place
