edit eng localisation

--- a/Ohtu-miniprojekti/src/main/resources/bundles/messages_en.properties
+++ b/Ohtu-miniprojekti/src/main/resources/bundles/messages_en.properties
@@ -29,7 +29,7 @@ title.add=Add Refence
 title.list=Listing of references
 title.bibtex=References as bibtex
 label.pureBibtex=pure bibtex
-label.downloadBibtex=Lataa .bib-tiedosto
+label.downloadBibtex=Download .bib-file
 title.pureBibtex=Pure bibtex
 title.update=Modify Reference
 header.bibtex=References as bibtex
