renamed pubYear and pubMonth to year and month respectively

--- a/Ohtu-miniprojekti/src/main/resources/bundles/messages_en.properties
+++ b/Ohtu-miniprojekti/src/main/resources/bundles/messages_en.properties
@@ -2,14 +2,14 @@ label.welcome=Welcome!
 label.list=Listing of All References
 author=Author
 title=Title
-pubYear=Publish year
+year=Publish year
 publisher=Publisher
 navibar.addRef=Add Reference
 navibar.list=List references
 navibar.listBib=List as bibtex
 organisation=Organisation
 booktitle=Book title
-pubMonth=Month
+month=Month
 journal=Journal
 search.text=Search references
 search.ignorecase=Ignore case
@@ -35,3 +35,4 @@ title.update=Modify Reference
 header.bibtex=References as bibtex
 pagesFromTo=Pages (format: beginning -- end)
 pubPlace=Publish place
+submit=Submit
