--- a/Ohtu-miniprojekti/src/main/resources/bundles/messages_fi.properties
+++ b/Ohtu-miniprojekti/src/main/resources/bundles/messages_fi.properties
@@ -1,7 +1,7 @@
 label.welcome=Tervetuloa!
 author=Kirjailija
 title=Otsikko
-pubYear=Julkaisuvuosi
+year=Julkaisuvuosi
 publisher=Julkaisija
 label.list=Kaikkien l\u00e4hteiden listaus
 navibar.addRef=Lis\u00e4\u00e4 l\u00e4hde
@@ -9,7 +9,7 @@ navibar.list=Listaa l\u00e4hteet
 navibar.listBib=Listaa l\u00e4hteet bibtexin\u00e4
 organisation=Organisaatio
 booktitle=Kirjan nimi
-pubMonth=Kuukausi
+month=Kuukausi
 journal=Julkaisu
 search.text=Etsi l\u00e4hteit\u00e4
 search.ignorecase=Merkkikokoriippumaton haku
@@ -35,3 +35,4 @@ title.update=P\u00e4ivit\u00e4 l\u00e4hdett\u00e4
 header.bibtex=L\u00e4hteet bibtexin\u00e4
 pagesFromTo=Sivut (muodossa: alku -- loppu)
 pubPlace=Julkaisupaikka
+submit=L\u00e4het\u00e4
