--- a/Ohtu-miniprojekti/src/main/resources/bundles/messages_sv.properties
+++ b/Ohtu-miniprojekti/src/main/resources/bundles/messages_sv.properties
@@ -3,14 +3,14 @@ label.welcome=V\u00e4lkommen
 label.list=Lista p\u00e5 alla referenser
 author=F\u00f6rfattare
 title=Titel
-pubYear=Utgivnings \u00e5r
+year=Utgivnings \u00e5r
 publisher=Utgivare
 navibar.addRef=L\u00e4gg till referens
 navibar.list=Lista alla referenser
 navibar.listBib=Lista referenserna i bibtex format
 organisation=Organisation
 booktitle=Bok titel
-pubMonth=M\u00e5nad
+month=M\u00e5nad
 journal=Journal
 search.text=S\u00f6k referenser
 search.ignorecase=Ignorera sm\u00e5 och stora bokst\u00e4ver
@@ -36,3 +36,4 @@ title.update=Uppdatera referenser
 header.bibtex=Referenserna i bibtex format
 pagesFromTo=Sidor (format: b\u00f6rjan -- slut)
 pubPlace=Utgivnings plats
+submit=Submitta
