some javascript funny stuff and deselect

--- a/Ohtu-miniprojekti/src/main/resources/bundles/messages_en.properties
+++ b/Ohtu-miniprojekti/src/main/resources/bundles/messages_en.properties
@@ -36,3 +36,4 @@ header.bibtex=References as bibtex
 pagesFromTo=Pages (format: beginning -- end)
 pubPlace=Publish place
 submit=Submit
+deselect=Deselect all
