--- a/Ohtu-miniprojekti/src/main/resources/bundles/messages_fi.properties
+++ b/Ohtu-miniprojekti/src/main/resources/bundles/messages_fi.properties
@@ -36,3 +36,4 @@ header.bibtex=L\u00e4hteet bibtexin\u00e4
 pagesFromTo=Sivut (muodossa: alku -- loppu)
 pubPlace=Julkaisupaikka
 submit=L\u00e4het\u00e4
+deselect=Valitse kaikki... NOT
