--- a/Ohtu-miniprojekti/src/main/resources/bundles/messages_sv.properties
+++ b/Ohtu-miniprojekti/src/main/resources/bundles/messages_sv.properties
@@ -36,4 +36,5 @@ title.update=Uppdatera referenser
 header.bibtex=Referenserna i bibtex format
 pagesFromTo=Sidor (format: b\u00f6rjan -- slut)
 pubPlace=Utgivnings plats
-submit=Submitta
+submit=Skicka
+deselect=V\u00e4lj alla... INTE
